Add experimental timeout scheduler