@@ -131,6 +131,7 @@
 						--enable-preview
 						--add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.async=ALL-UNNAMED
 						--add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.functional=ALL-UNNAMED
+						--add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.scheduler.impl=ALL-UNNAMED
 						--add-opens org.reactivetoolbox.eventbus/org.reactivetoolbox.eventbus=ALL-UNNAMED
 						--add-opens org.reactivetoolbox.eventbus/org.reactivetoolbox.eventbus.impl=ALL-UNNAMED
 						--add-opens org.reactivetoolbox.web/org.reactivetoolbox.web.server=ALL-UNNAMED
